# reed-solomon-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
benches/: decode.rs  encode.rs
examples/: bandwidth.rs  helloworld.rs
src/: buffer.rs  decoder.rs  encoder.rs  lib.rs  macros.rs
src/gf/: mod.rs  poly.rs  poly_math.rs
tests/: simple.rs
