[package]
name = "reed-solomon"
description = "Reed-Solomon BCH encoder and decoder with support of no_std environment"
repository = "https://github.com/mersinvald/reed-solomon-rs"
readme = "README.md"
license = "MIT"
keywords = ["cryptography", "ecc", "bch", "no_std"]
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
version = "0.1.0"

[dev-dependencies]
rustc-serialize = "0.3"