[package]
name = "reed-solomon"
description = "Reed-Solomon BCH encoder and decoder with support of no_std environment"
repository = "https://github.com/mersinvald/reed-solomon-rs"
documentation = "https://docs.rs/reed-solomon/"
readme = "README.md"
license = "MIT"
keywords = ["cryptography", "ecc", "bch", "no_std"]
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
version = "0.1.4"

[dev-dependencies]
rustc-serialize = "0.3"

[features]
unsafe_indexing = []
